--- a/taskmaster/src/main/resources/templates/all-users.html
+++ b/taskmaster/src/main/resources/templates/all-users.html
@@ -6,35 +6,36 @@
 <div class="bg-background text-foreground min-h-screen p-4 flex flex-col items-center mb-8">
     <h1 class="text-3xl mb-6 text-center">All users</h1>
     <div class="flex w-[70em] justify-end mb-4">
-        <p th:text="${@usersPagingAndSorting.getTotalElements() + ' users'}" class="mr-auto text-2xl ">2 users</p>
+        <p th:text="${foundedUsers.getTotalElements() + ' users'}" class="mr-auto text-2xl ">2 users</p>
         <div class="flex items-center space-x-2">
             <button onclick="search(getElementById('search').value)"
                     class="px-4 py-2 rounded-lg bg-primary text-primary-foreground">Search
             </button>
-            <input th:value="${@usersPagingAndSorting.getSearchQuery()}" th:id="search" type="text" placeholder=""
+            <input th:value="${@pagingAndSortingServiceImpl.getSearchQuery()}" th:id="search" type="text" placeholder=""
                    class="w-full md:w-64 text-black px-4 py-2 rounded-lg  focus:outline-none focus:ring focus:ring-primary"/>
-            <label for="sort-by" class="text-base text-primary">Sort by:</label>
-            <select th:value="${@usersPagingAndSorting.getSortBy()}"
-                    onchange="sortBy(this.value)" id="sort-by"
+            <label for="sortProperty" class="text-base text-primary">Sort by:</label>
+            <select
+                    onchange="sort(this.value, getElementById('sortDirection').value)"
+                    id="sortProperty"
                     class="bg-input text-zinc-600 border border-input rounded-md px-4 py-2 pr-8">
-                <option value="none">None</option>
-                <option th:each="option: ${@usersPagingAndSorting.getSortingFields()}"
+                <option value="">None</option>
+                <option th:each="option: ${@sortingFieldsUtils.getSortingFields('User')}"
                         th:value="${option}"
                         th:text="${#strings.capitalize(option)}"
-                        th:selected="${@usersPagingAndSorting.getSortBy().equals(option)}">
+                        th:selected="${sortProperties.equals(option)}">
                     Username
                 </option>
             </select>
-            <!--         px-2 py-1 pr-8-->
-            <select th:value="${@usersPagingAndSorting.getSortDirection()}"
-                    onchange="sortDirection(this.value)"
+            <select
+                    id="sortDirection"
+                    onchange="sort(getElementById('sortProperty').value,this.value)"
                     class="bg-input text-zinc-600 border border-input rounded-md px-4 py-2 pr-8">
-                <option th:selected="${@usersPagingAndSorting.getSortDirection().equals('ASC')}"
-                        value="ASC">
+                <option th:selected="${sortDirection.equals('asc')}"
+                        value="asc">
                     ASC
                 </option>
-                <option th:selected="${@usersPagingAndSorting.getSortDirection().equals('DESC')}"
-                        value="DESC">
+                <option th:selected="${sortDirection.equals('desc')}"
+                        value="desc">
                     DESC
                 </option>
             </select>
@@ -53,7 +54,7 @@
             </tr>
             </thead>
             <tbody id="users">
-            <tr th:each="user : ${foundedUsers}" th:object="${user}" th:id="*{id + '-section'}">
+            <tr th:each="user : ${foundedUsers.getContent()}" th:object="${user}" th:id="*{id + '-section'}">
                 <td th:text="*{username}" class="px-4 py-2 text-center">JohnDoe</td>
                 <td th:text="*{fullName}" class="px-4 py-2 text-center">John Doe</td>
                 <td th:text="*{email}" class="px-4 py-2 text-center">john.doe@example.com</td>
@@ -83,17 +84,13 @@
             </tbody>
         </table>
         <div class=" mt-4 flex justify-end">
-            <button th:if="${@usersPagingAndSorting.hasPrevPage()}"
-                    th:data-max-page-count="${@usersPagingAndSorting.getPageCount()}"
-                    th:data-page="${@usersPagingAndSorting.getPage()}"
-                    onclick="prevPage(this.dataset.maxPageCount)"
+            <button th:if="${!foundedUsers.isFirst()}"
+                    onclick="prevPage()"
                     class="ref-on-click bg-primary text-primary-foreground px-2 py-2 mr-4 rounded-lg ">Previous
             </button
             >
-            <button th:if="${@usersPagingAndSorting.hasNextPage()}"
-                    th:data-max-page-count="${@usersPagingAndSorting.getPageCount()}"
-                    th:data-page="${@usersPagingAndSorting.getPage()}"
-                    onclick="nextPage(this.dataset.maxPageCount)"
+            <button th:if="${!foundedUsers.isLast()}"
+                    onclick="nextPage()"
                     class="ref-on-click bg-primary text-primary-foreground px-2 py-2 rounded-lg ">Next
             </button>
         </div>
@@ -203,63 +200,8 @@
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
 </body>
-<script>
+<script th:src="@{/js/pagingSortingAndFiltering.js}"></script>
 
-    function getUrl() {
-        return new URL(window.location);
-    }
-
-    function reload(url) {
-        window.location.replace(url.href);
-    }
-
-    function nextPage(page, maxPageCount) {
-        let url = getUrl();
-        let newPage = url.searchParams.get('page') == null ? 2 : String(Number(url.searchParams.get('page')) + 1);
-        if (Number(newPage) > Number(maxPageCount)){
-            newPage = 2;
-        }
-        url.searchParams.set("page", newPage);
-        reload(url);
-    }
-
-    function prevPage(page, maxPageCount) {
-        let url = getUrl();
-        let newPage = url.searchParams.get('page') == null ? 0 : String(Number(url.searchParams.get('page')) - 1);
-        if (Number(newPage) > Number(maxPageCount)){
-            newPage = 1;
-        }
-        url.searchParams.set("page", newPage);
-        reload(url);
-    }
-
-    function sortBy(by) {
-        let url = getUrl();
-        if (by === 'none') {
-            url.searchParams.delete('sortBy');
-        } else {
-            url.searchParams.set('sortBy', by);
-        }
-        reload(url);
-    }
-
-    function sortDirection(direction) {
-        let url = getUrl();
-        url.searchParams.set('sortDirection', direction);
-        reload(url);
-    }
-
-    function search(search) {
-        let url = getUrl();
-        if (!url.href.includes('/search')) {
-            url.href = 'http://localhost:8080/users/search';
-        }
-        url.searchParams.set("search_query", search);
-        reload(url);
-    }
-
-
-</script>
 <script th:if="${showEdit}">
     document.getElementById('editSection').classList.toggle('hidden', false);
     document.getElementById('changePasswordSection').classList.add('hidden');
