--- a/taskmaster/src/main/resources/templates/fragments/navigation.html
+++ b/taskmaster/src/main/resources/templates/fragments/navigation.html
@@ -21,7 +21,7 @@
         class=" hidden md:flex flex-col md:flex-row items-center space-x-4 order-3 md:order-2 w-full md:w-auto">
         <li><a sec:authorize="isAuthenticated()" th:href="@{/tasks/add-task}"
                class="text-base font-medium hover:text-primary-700">Add Task</a></li>
-        <li><a sec:authorize="isAuthenticated()" th:href="@{/tasks/add-task}"
+        <li><a sec:authorize="isAuthenticated()" th:href="@{/questions/ask}"
                class="text-base font-medium hover:text-primary-700">Ask Question</a></li>
         <li><a th:href="@{/questions}" class="text-base font-medium hover:text-primary-700">Questions</a></li>
         <li><a th:href="@{/about}" class="text-base font-medium hover:text-primary-700">About</a></li>
