--- a/taskmaster/src/main/resources/templates/questions-details.html
+++ b/taskmaster/src/main/resources/templates/questions-details.html
@@ -80,10 +80,12 @@
             </div>
             <div th:if="${invalidData}" id="invalidDataScroll"></div>
             <div th:each="answer: *{answers}" class="comment-container border-solid border-black border-b-2 pb-4">
-                <p th:text="${answer.getDescription()}" class="text-black mt-2">Great job on completing this task! Great
-                    job on completing this task!</p>
-                <pre class="pl-4 pr-4 mt-4 box-border overflow-scroll bg-code rounded-lg">
-                <code th:text="${answer.getCode()}" class="text-black pl-2">
+                <div th:object="${answer}">
+                    <p th:text="*{getDescription}" class="text-black mt-2">Great job on completing this task!
+                        Great
+                        job on completing this task!</p>
+                    <pre class="pl-4 pr-4 mt-4 box-border overflow-scroll bg-code rounded-lg">
+                <code th:text="*{getCode}" class="text-black pl-2">
 @GetMapping("/ask")
     public String askView(Model model) {
         if (!model.containsAttribute("askQuestionData")) {
@@ -93,15 +95,17 @@
     }
                 </code>
                 </pre>
-                <div class="text-black  flex justify-between items-center">
-                    <button class="mt-6 delete-comment-button bg-destructive text-destructive-foreground px-2 py-1 rounded-lg font-semibold">
-                        Delete
-                    </button>
-                    <div class="mt-4">
-                        <p th:text="${'answered ' + answer.getCreatedTime()}" class="font-semibold ">answered May 9,
-                            2012 at 4:09 </p>
-                        <p th:text="${'by ' + answer.getUserUsername()}" class="font-semibold text-black text-right ">by
-                            Shenol10</p>
+                    <div class="text-black  flex justify-between items-center">
+                        <button class="mt-6 delete-comment-button bg-destructive text-destructive-foreground px-2 py-1 rounded-lg font-semibold">
+                            Delete
+                        </button>
+                        <div class="mt-4">
+                            <p th:text="*{'answered ' + getCreatedTime}" class="font-semibold ">answered May 9,
+                                2012 at 4:09 </p>
+                            <p th:text="*{'by ' + getUserUsername()}"
+                               class="font-semibold text-black text-right ">by
+                                Shenol10</p>
+                        </div>
                     </div>
                 </div>
             </div>
