Add i18n validation message in english. Wip for bulgarian

--- a/taskmaster/src/main/resources/templates/contacts.html
+++ b/taskmaster/src/main/resources/templates/contacts.html
@@ -61,7 +61,7 @@
         </form>
     </div>
 </div>
-<div th:if="${scrollToFrom}" id="scroll"></div>
+<div th:if="${invalidData}" id="scroll"></div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
 </body>
 <script th:src="@{/js/map.js}"></script>
